semantico/goianinha.output
Terminais sem uso na gramática

    TOKEN_NOVA_LINHA


Estado 62 conflitos: 1 de deslocamento/redução
Estado 118 conflitos: 1 de deslocamento/redução


Gramática

    0 $accept: programa $end

    1 programa: decl_func_var decl_prog

    2 decl_func_var: ε
    3              | tipo VALUE_ID decl_var TOKEN_FIM decl_func_var
    4              | tipo VALUE_ID decl_func decl_func_var

    5 decl_prog: TOKEN_PROGRAMA bloco

    6 decl_var: ε
    7         | TOKEN_VIRGULA VALUE_ID decl_var

    8 decl_func: TOKEN_ABR_PARENT lista_parametros TOKEN_FCH_PARENT bloco

    9 lista_parametros: ε
   10                 | lista_parametros_cont

   11 lista_parametros_cont: tipo VALUE_ID
   12                      | tipo VALUE_ID TOKEN_VIRGULA lista_parametros_cont

   13 bloco: TOKEN_ABR_BLOCO lista_decl_var lista_comando TOKEN_FCH_BLOCO

   14 lista_decl_var: ε
   15               | tipo VALUE_ID decl_var TOKEN_FIM lista_decl_var

   16 tipo: TOKEN_INT
   17     | TOKEN_CHAR

   18 lista_comando: comando
   19              | comando lista_comando

   20 comando: TOKEN_FIM
   21        | expr TOKEN_FIM
   22        | TOKEN_RETORNE expr TOKEN_FIM
   23        | TOKEN_LEIA VALUE_ID TOKEN_FIM
   24        | TOKEN_ESCREVA expr TOKEN_FIM
   25        | TOKEN_ESCREVA VALUE_STRING TOKEN_FIM
   26        | TOKEN_NOVALINHA TOKEN_FIM
   27        | TOKEN_SE TOKEN_ABR_PARENT expr TOKEN_FCH_PARENT TOKEN_ENTAO comando
   28        | TOKEN_SE TOKEN_ABR_PARENT expr TOKEN_FCH_PARENT TOKEN_ENTAO comando TOKEN_SENAO comando
   29        | TOKEN_ENQUANTO TOKEN_ABR_PARENT expr TOKEN_FCH_PARENT TOKEN_EXECUTE comando
   30        | bloco

   31 expr: or_expr
   32     | VALUE_ID TOKEN_ATTR expr

   33 or_expr: and_expr
   34        | or_expr TOKEN_OU and_expr

   35 and_expr: eq_expr
   36         | and_expr TOKEN_E eq_expr

   37 eq_expr: desig_expr
   38        | eq_expr TOKEN_IGUAL desig_expr
   39        | eq_expr TOKEN_NAO_IGUAL desig_expr

   40 desig_expr: add_expr
   41           | desig_expr TOKEN_MENOR add_expr
   42           | desig_expr TOKEN_MAIOR add_expr
   43           | desig_expr TOKEN_MAIOR_IGUAL add_expr
   44           | desig_expr TOKEN_MENOR_IGUAL add_expr

   45 add_expr: mul_expr
   46         | add_expr TOKEN_MAIS mul_expr
   47         | add_expr TOKEN_MENOS mul_expr

   48 mul_expr: un_expr
   49         | mul_expr TOKEN_MULT un_expr
   50         | mul_expr TOKEN_DIVIDE un_expr

   51 un_expr: prim_expr
   52        | TOKEN_MENOS prim_expr
   53        | TOKEN_NEGATIVA prim_expr

   54 prim_expr: VALUE_ID TOKEN_ABR_PARENT list_expr TOKEN_FCH_PARENT
   55          | VALUE_ID TOKEN_ABR_PARENT TOKEN_FCH_PARENT
   56          | VALUE_ID
   57          | VALUE_STRING
   58          | VALUE_DIGITO
   59          | TOKEN_ABR_PARENT expr TOKEN_FCH_PARENT

   60 list_expr: expr
   61          | list_expr TOKEN_VIRGULA expr


Terminais, com as regras onde eles aparecem

    $end (0) 0
    error (256)
    VALUE_ID <str> (258) 3 4 7 11 12 15 23 32 54 55 56
    VALUE_DIGITO <str> (259) 58
    VALUE_STRING <str> (260) 25 57
    TOKEN_INT (261) 16
    TOKEN_CHAR (262) 17
    TOKEN_ATTR (263) 32
    TOKEN_E (264) 36
    TOKEN_OU (265) 34
    TOKEN_IGUAL (266) 38
    TOKEN_MAIOR (267) 42
    TOKEN_MENOR (268) 41
    TOKEN_NAO_IGUAL (269) 39
    TOKEN_MAIOR_IGUAL (270) 43
    TOKEN_MENOR_IGUAL (271) 44
    TOKEN_MAIS (272) 46
    TOKEN_MENOS (273) 47 52
    TOKEN_MULT (274) 49
    TOKEN_DIVIDE (275) 50
    TOKEN_NEGATIVA (276) 53
    TOKEN_SE (277) 27 28
    TOKEN_ENTAO (278) 27 28
    TOKEN_SENAO (279) 28
    TOKEN_EXECUTE (280) 29
    TOKEN_ENQUANTO (281) 29
    TOKEN_PROGRAMA (282) 5
    TOKEN_LEIA (283) 23
    TOKEN_ESCREVA (284) 24 25
    TOKEN_RETORNE (285) 22
    TOKEN_NOVALINHA (286) 26
    TOKEN_ABR_PARENT (287) 8 27 28 29 54 55 59
    TOKEN_FCH_PARENT (288) 8 27 28 29 54 55 59
    TOKEN_ABR_BLOCO (289) 13
    TOKEN_FCH_BLOCO (290) 13
    TOKEN_VIRGULA (291) 7 12 61
    TOKEN_FIM (292) 3 15 20 21 22 23 24 25 26
    TOKEN_NOVA_LINHA (293)


Não terminais com as regras onde eles aparecem

    $accept (39)
        à esquerda: 0
    programa <raiz> (40)
        à esquerda: 1
        à direita: 0
    decl_func_var <declFuncVar> (41)
        à esquerda: 2 3 4
        à direita: 1 3 4
    decl_prog <bloco> (42)
        à esquerda: 5
        à direita: 1
    decl_var <declFuncVar> (43)
        à esquerda: 6 7
        à direita: 3 7 15
    decl_func <declFuncVar> (44)
        à esquerda: 8
        à direita: 4
    lista_parametros <listaParametros> (45)
        à esquerda: 9 10
        à direita: 8
    lista_parametros_cont <listaParametros> (46)
        à esquerda: 11 12
        à direita: 10 12
    bloco <bloco> (47)
        à esquerda: 13
        à direita: 5 8 30
    lista_decl_var <declFuncVar> (48)
        à esquerda: 14 15
        à direita: 13 15
    tipo <tipo> (49)
        à esquerda: 16 17
        à direita: 3 4 11 12 15
    lista_comando <listaComando> (50)
        à esquerda: 18 19
        à direita: 13 19
    comando <listaComando> (51)
        à esquerda: 20 21 22 23 24 25 26 27 28 29 30
        à direita: 18 19 27 28 29
    expr <expr> (52)
        à esquerda: 31 32
        à direita: 21 22 24 27 28 29 32 59 60 61
    or_expr <expr> (53)
        à esquerda: 33 34
        à direita: 31 34
    and_expr <expr> (54)
        à esquerda: 35 36
        à direita: 33 34 36
    eq_expr <expr> (55)
        à esquerda: 37 38 39
        à direita: 35 36 38 39
    desig_expr <expr> (56)
        à esquerda: 40 41 42 43 44
        à direita: 37 38 39 41 42 43 44
    add_expr <expr> (57)
        à esquerda: 45 46 47
        à direita: 40 41 42 43 44 46 47
    mul_expr <expr> (58)
        à esquerda: 48 49 50
        à direita: 45 46 47 49 50
    un_expr <expr> (59)
        à esquerda: 51 52 53
        à direita: 48 49 50
    prim_expr <primExpr> (60)
        à esquerda: 54 55 56 57 58 59
        à direita: 51 52 53
    list_expr <expr> (61)
        à esquerda: 60 61
        à direita: 54 61


Estado 0

    0 $accept: • programa $end

    TOKEN_INT   deslocar, e ir ao estado 1
    TOKEN_CHAR  deslocar, e ir ao estado 2

    $padrão  reduzir usando a regra 2 (decl_func_var)

    programa       ir ao estado 3
    decl_func_var  ir ao estado 4
    tipo           ir ao estado 5


Estado 1

   16 tipo: TOKEN_INT •

    $padrão  reduzir usando a regra 16 (tipo)


Estado 2

   17 tipo: TOKEN_CHAR •

    $padrão  reduzir usando a regra 17 (tipo)


Estado 3

    0 $accept: programa • $end

    $end  deslocar, e ir ao estado 6


Estado 4

    1 programa: decl_func_var • decl_prog

    TOKEN_PROGRAMA  deslocar, e ir ao estado 7

    decl_prog  ir ao estado 8


Estado 5

    3 decl_func_var: tipo • VALUE_ID decl_var TOKEN_FIM decl_func_var
    4              | tipo • VALUE_ID decl_func decl_func_var

    VALUE_ID  deslocar, e ir ao estado 9


Estado 6

    0 $accept: programa $end •

    $padrão  aceitar


Estado 7

    5 decl_prog: TOKEN_PROGRAMA • bloco

    TOKEN_ABR_BLOCO  deslocar, e ir ao estado 10

    bloco  ir ao estado 11


Estado 8

    1 programa: decl_func_var decl_prog •

    $padrão  reduzir usando a regra 1 (programa)


Estado 9

    3 decl_func_var: tipo VALUE_ID • decl_var TOKEN_FIM decl_func_var
    4              | tipo VALUE_ID • decl_func decl_func_var

    TOKEN_ABR_PARENT  deslocar, e ir ao estado 12
    TOKEN_VIRGULA     deslocar, e ir ao estado 13

    $padrão  reduzir usando a regra 6 (decl_var)

    decl_var   ir ao estado 14
    decl_func  ir ao estado 15


Estado 10

   13 bloco: TOKEN_ABR_BLOCO • lista_decl_var lista_comando TOKEN_FCH_BLOCO

    TOKEN_INT   deslocar, e ir ao estado 1
    TOKEN_CHAR  deslocar, e ir ao estado 2

    $padrão  reduzir usando a regra 14 (lista_decl_var)

    lista_decl_var  ir ao estado 16
    tipo            ir ao estado 17


Estado 11

    5 decl_prog: TOKEN_PROGRAMA bloco •

    $padrão  reduzir usando a regra 5 (decl_prog)


Estado 12

    8 decl_func: TOKEN_ABR_PARENT • lista_parametros TOKEN_FCH_PARENT bloco

    TOKEN_INT   deslocar, e ir ao estado 1
    TOKEN_CHAR  deslocar, e ir ao estado 2

    $padrão  reduzir usando a regra 9 (lista_parametros)

    lista_parametros       ir ao estado 18
    lista_parametros_cont  ir ao estado 19
    tipo                   ir ao estado 20


Estado 13

    7 decl_var: TOKEN_VIRGULA • VALUE_ID decl_var

    VALUE_ID  deslocar, e ir ao estado 21


Estado 14

    3 decl_func_var: tipo VALUE_ID decl_var • TOKEN_FIM decl_func_var

    TOKEN_FIM  deslocar, e ir ao estado 22


Estado 15

    4 decl_func_var: tipo VALUE_ID decl_func • decl_func_var

    TOKEN_INT   deslocar, e ir ao estado 1
    TOKEN_CHAR  deslocar, e ir ao estado 2

    $padrão  reduzir usando a regra 2 (decl_func_var)

    decl_func_var  ir ao estado 23
    tipo           ir ao estado 5


Estado 16

   13 bloco: TOKEN_ABR_BLOCO lista_decl_var • lista_comando TOKEN_FCH_BLOCO

    VALUE_ID          deslocar, e ir ao estado 24
    VALUE_DIGITO      deslocar, e ir ao estado 25
    VALUE_STRING      deslocar, e ir ao estado 26
    TOKEN_MENOS       deslocar, e ir ao estado 27
    TOKEN_NEGATIVA    deslocar, e ir ao estado 28
    TOKEN_SE          deslocar, e ir ao estado 29
    TOKEN_ENQUANTO    deslocar, e ir ao estado 30
    TOKEN_LEIA        deslocar, e ir ao estado 31
    TOKEN_ESCREVA     deslocar, e ir ao estado 32
    TOKEN_RETORNE     deslocar, e ir ao estado 33
    TOKEN_NOVALINHA   deslocar, e ir ao estado 34
    TOKEN_ABR_PARENT  deslocar, e ir ao estado 35
    TOKEN_ABR_BLOCO   deslocar, e ir ao estado 10
    TOKEN_FIM         deslocar, e ir ao estado 36

    bloco          ir ao estado 37
    lista_comando  ir ao estado 38
    comando        ir ao estado 39
    expr           ir ao estado 40
    or_expr        ir ao estado 41
    and_expr       ir ao estado 42
    eq_expr        ir ao estado 43
    desig_expr     ir ao estado 44
    add_expr       ir ao estado 45
    mul_expr       ir ao estado 46
    un_expr        ir ao estado 47
    prim_expr      ir ao estado 48


Estado 17

   15 lista_decl_var: tipo • VALUE_ID decl_var TOKEN_FIM lista_decl_var

    VALUE_ID  deslocar, e ir ao estado 49


Estado 18

    8 decl_func: TOKEN_ABR_PARENT lista_parametros • TOKEN_FCH_PARENT bloco

    TOKEN_FCH_PARENT  deslocar, e ir ao estado 50


Estado 19

   10 lista_parametros: lista_parametros_cont •

    $padrão  reduzir usando a regra 10 (lista_parametros)


Estado 20

   11 lista_parametros_cont: tipo • VALUE_ID
   12                      | tipo • VALUE_ID TOKEN_VIRGULA lista_parametros_cont

    VALUE_ID  deslocar, e ir ao estado 51


Estado 21

    7 decl_var: TOKEN_VIRGULA VALUE_ID • decl_var

    TOKEN_VIRGULA  deslocar, e ir ao estado 13

    $padrão  reduzir usando a regra 6 (decl_var)

    decl_var  ir ao estado 52


Estado 22

    3 decl_func_var: tipo VALUE_ID decl_var TOKEN_FIM • decl_func_var

    TOKEN_INT   deslocar, e ir ao estado 1
    TOKEN_CHAR  deslocar, e ir ao estado 2

    $padrão  reduzir usando a regra 2 (decl_func_var)

    decl_func_var  ir ao estado 53
    tipo           ir ao estado 5


Estado 23

    4 decl_func_var: tipo VALUE_ID decl_func decl_func_var •

    $padrão  reduzir usando a regra 4 (decl_func_var)


Estado 24

   32 expr: VALUE_ID • TOKEN_ATTR expr
   54 prim_expr: VALUE_ID • TOKEN_ABR_PARENT list_expr TOKEN_FCH_PARENT
   55          | VALUE_ID • TOKEN_ABR_PARENT TOKEN_FCH_PARENT
   56          | VALUE_ID •

    TOKEN_ATTR        deslocar, e ir ao estado 54
    TOKEN_ABR_PARENT  deslocar, e ir ao estado 55

    $padrão  reduzir usando a regra 56 (prim_expr)


Estado 25

   58 prim_expr: VALUE_DIGITO •

    $padrão  reduzir usando a regra 58 (prim_expr)


Estado 26

   57 prim_expr: VALUE_STRING •

    $padrão  reduzir usando a regra 57 (prim_expr)


Estado 27

   52 un_expr: TOKEN_MENOS • prim_expr

    VALUE_ID          deslocar, e ir ao estado 56
    VALUE_DIGITO      deslocar, e ir ao estado 25
    VALUE_STRING      deslocar, e ir ao estado 26
    TOKEN_ABR_PARENT  deslocar, e ir ao estado 35

    prim_expr  ir ao estado 57


Estado 28

   53 un_expr: TOKEN_NEGATIVA • prim_expr

    VALUE_ID          deslocar, e ir ao estado 56
    VALUE_DIGITO      deslocar, e ir ao estado 25
    VALUE_STRING      deslocar, e ir ao estado 26
    TOKEN_ABR_PARENT  deslocar, e ir ao estado 35

    prim_expr  ir ao estado 58


Estado 29

   27 comando: TOKEN_SE • TOKEN_ABR_PARENT expr TOKEN_FCH_PARENT TOKEN_ENTAO comando
   28        | TOKEN_SE • TOKEN_ABR_PARENT expr TOKEN_FCH_PARENT TOKEN_ENTAO comando TOKEN_SENAO comando

    TOKEN_ABR_PARENT  deslocar, e ir ao estado 59


Estado 30

   29 comando: TOKEN_ENQUANTO • TOKEN_ABR_PARENT expr TOKEN_FCH_PARENT TOKEN_EXECUTE comando

    TOKEN_ABR_PARENT  deslocar, e ir ao estado 60


Estado 31

   23 comando: TOKEN_LEIA • VALUE_ID TOKEN_FIM

    VALUE_ID  deslocar, e ir ao estado 61


Estado 32

   24 comando: TOKEN_ESCREVA • expr TOKEN_FIM
   25        | TOKEN_ESCREVA • VALUE_STRING TOKEN_FIM

    VALUE_ID          deslocar, e ir ao estado 24
    VALUE_DIGITO      deslocar, e ir ao estado 25
    VALUE_STRING      deslocar, e ir ao estado 62
    TOKEN_MENOS       deslocar, e ir ao estado 27
    TOKEN_NEGATIVA    deslocar, e ir ao estado 28
    TOKEN_ABR_PARENT  deslocar, e ir ao estado 35

    expr        ir ao estado 63
    or_expr     ir ao estado 41
    and_expr    ir ao estado 42
    eq_expr     ir ao estado 43
    desig_expr  ir ao estado 44
    add_expr    ir ao estado 45
    mul_expr    ir ao estado 46
    un_expr     ir ao estado 47
    prim_expr   ir ao estado 48


Estado 33

   22 comando: TOKEN_RETORNE • expr TOKEN_FIM

    VALUE_ID          deslocar, e ir ao estado 24
    VALUE_DIGITO      deslocar, e ir ao estado 25
    VALUE_STRING      deslocar, e ir ao estado 26
    TOKEN_MENOS       deslocar, e ir ao estado 27
    TOKEN_NEGATIVA    deslocar, e ir ao estado 28
    TOKEN_ABR_PARENT  deslocar, e ir ao estado 35

    expr        ir ao estado 64
    or_expr     ir ao estado 41
    and_expr    ir ao estado 42
    eq_expr     ir ao estado 43
    desig_expr  ir ao estado 44
    add_expr    ir ao estado 45
    mul_expr    ir ao estado 46
    un_expr     ir ao estado 47
    prim_expr   ir ao estado 48


Estado 34

   26 comando: TOKEN_NOVALINHA • TOKEN_FIM

    TOKEN_FIM  deslocar, e ir ao estado 65


Estado 35

   59 prim_expr: TOKEN_ABR_PARENT • expr TOKEN_FCH_PARENT

    VALUE_ID          deslocar, e ir ao estado 24
    VALUE_DIGITO      deslocar, e ir ao estado 25
    VALUE_STRING      deslocar, e ir ao estado 26
    TOKEN_MENOS       deslocar, e ir ao estado 27
    TOKEN_NEGATIVA    deslocar, e ir ao estado 28
    TOKEN_ABR_PARENT  deslocar, e ir ao estado 35

    expr        ir ao estado 66
    or_expr     ir ao estado 41
    and_expr    ir ao estado 42
    eq_expr     ir ao estado 43
    desig_expr  ir ao estado 44
    add_expr    ir ao estado 45
    mul_expr    ir ao estado 46
    un_expr     ir ao estado 47
    prim_expr   ir ao estado 48


Estado 36

   20 comando: TOKEN_FIM •

    $padrão  reduzir usando a regra 20 (comando)


Estado 37

   30 comando: bloco •

    $padrão  reduzir usando a regra 30 (comando)


Estado 38

   13 bloco: TOKEN_ABR_BLOCO lista_decl_var lista_comando • TOKEN_FCH_BLOCO

    TOKEN_FCH_BLOCO  deslocar, e ir ao estado 67


Estado 39

   18 lista_comando: comando •
   19              | comando • lista_comando

    VALUE_ID          deslocar, e ir ao estado 24
    VALUE_DIGITO      deslocar, e ir ao estado 25
    VALUE_STRING      deslocar, e ir ao estado 26
    TOKEN_MENOS       deslocar, e ir ao estado 27
    TOKEN_NEGATIVA    deslocar, e ir ao estado 28
    TOKEN_SE          deslocar, e ir ao estado 29
    TOKEN_ENQUANTO    deslocar, e ir ao estado 30
    TOKEN_LEIA        deslocar, e ir ao estado 31
    TOKEN_ESCREVA     deslocar, e ir ao estado 32
    TOKEN_RETORNE     deslocar, e ir ao estado 33
    TOKEN_NOVALINHA   deslocar, e ir ao estado 34
    TOKEN_ABR_PARENT  deslocar, e ir ao estado 35
    TOKEN_ABR_BLOCO   deslocar, e ir ao estado 10
    TOKEN_FIM         deslocar, e ir ao estado 36

    $padrão  reduzir usando a regra 18 (lista_comando)

    bloco          ir ao estado 37
    lista_comando  ir ao estado 68
    comando        ir ao estado 39
    expr           ir ao estado 40
    or_expr        ir ao estado 41
    and_expr       ir ao estado 42
    eq_expr        ir ao estado 43
    desig_expr     ir ao estado 44
    add_expr       ir ao estado 45
    mul_expr       ir ao estado 46
    un_expr        ir ao estado 47
    prim_expr      ir ao estado 48


Estado 40

   21 comando: expr • TOKEN_FIM

    TOKEN_FIM  deslocar, e ir ao estado 69


Estado 41

   31 expr: or_expr •
   34 or_expr: or_expr • TOKEN_OU and_expr

    TOKEN_OU  deslocar, e ir ao estado 70

    $padrão  reduzir usando a regra 31 (expr)


Estado 42

   33 or_expr: and_expr •
   36 and_expr: and_expr • TOKEN_E eq_expr

    TOKEN_E  deslocar, e ir ao estado 71

    $padrão  reduzir usando a regra 33 (or_expr)


Estado 43

   35 and_expr: eq_expr •
   38 eq_expr: eq_expr • TOKEN_IGUAL desig_expr
   39        | eq_expr • TOKEN_NAO_IGUAL desig_expr

    TOKEN_IGUAL      deslocar, e ir ao estado 72
    TOKEN_NAO_IGUAL  deslocar, e ir ao estado 73

    $padrão  reduzir usando a regra 35 (and_expr)


Estado 44

   37 eq_expr: desig_expr •
   41 desig_expr: desig_expr • TOKEN_MENOR add_expr
   42           | desig_expr • TOKEN_MAIOR add_expr
   43           | desig_expr • TOKEN_MAIOR_IGUAL add_expr
   44           | desig_expr • TOKEN_MENOR_IGUAL add_expr

    TOKEN_MAIOR        deslocar, e ir ao estado 74
    TOKEN_MENOR        deslocar, e ir ao estado 75
    TOKEN_MAIOR_IGUAL  deslocar, e ir ao estado 76
    TOKEN_MENOR_IGUAL  deslocar, e ir ao estado 77

    $padrão  reduzir usando a regra 37 (eq_expr)


Estado 45

   40 desig_expr: add_expr •
   46 add_expr: add_expr • TOKEN_MAIS mul_expr
   47         | add_expr • TOKEN_MENOS mul_expr

    TOKEN_MAIS   deslocar, e ir ao estado 78
    TOKEN_MENOS  deslocar, e ir ao estado 79

    $padrão  reduzir usando a regra 40 (desig_expr)


Estado 46

   45 add_expr: mul_expr •
   49 mul_expr: mul_expr • TOKEN_MULT un_expr
   50         | mul_expr • TOKEN_DIVIDE un_expr

    TOKEN_MULT    deslocar, e ir ao estado 80
    TOKEN_DIVIDE  deslocar, e ir ao estado 81

    $padrão  reduzir usando a regra 45 (add_expr)


Estado 47

   48 mul_expr: un_expr •

    $padrão  reduzir usando a regra 48 (mul_expr)


Estado 48

   51 un_expr: prim_expr •

    $padrão  reduzir usando a regra 51 (un_expr)


Estado 49

   15 lista_decl_var: tipo VALUE_ID • decl_var TOKEN_FIM lista_decl_var

    TOKEN_VIRGULA  deslocar, e ir ao estado 13

    $padrão  reduzir usando a regra 6 (decl_var)

    decl_var  ir ao estado 82


Estado 50

    8 decl_func: TOKEN_ABR_PARENT lista_parametros TOKEN_FCH_PARENT • bloco

    TOKEN_ABR_BLOCO  deslocar, e ir ao estado 10

    bloco  ir ao estado 83


Estado 51

   11 lista_parametros_cont: tipo VALUE_ID •
   12                      | tipo VALUE_ID • TOKEN_VIRGULA lista_parametros_cont

    TOKEN_VIRGULA  deslocar, e ir ao estado 84

    $padrão  reduzir usando a regra 11 (lista_parametros_cont)


Estado 52

    7 decl_var: TOKEN_VIRGULA VALUE_ID decl_var •

    $padrão  reduzir usando a regra 7 (decl_var)


Estado 53

    3 decl_func_var: tipo VALUE_ID decl_var TOKEN_FIM decl_func_var •

    $padrão  reduzir usando a regra 3 (decl_func_var)


Estado 54

   32 expr: VALUE_ID TOKEN_ATTR • expr
